third_party/rust/cubeb-sys/libcubeb/include/cubeb/cubeb.h


typedef struct cubeb cubeb;               
typedef struct cubeb_stream cubeb_stream; 
typedef enum {
  CUBEB_SAMPLE_S16LE,
  CUBEB_SAMPLE_S16BE,
  CUBEB_SAMPLE_FLOAT32LE,
  CUBEB_SAMPLE_FLOAT32BE,
#if defined(WORDS_BIGENDIAN) || defined(__BIG_ENDIAN__)
  CUBEB_SAMPLE_S16NE = CUBEB_SAMPLE_S16BE,
  CUBEB_SAMPLE_FLOAT32NE = CUBEB_SAMPLE_FLOAT32BE
#else
  CUBEB_SAMPLE_S16NE = CUBEB_SAMPLE_S16LE,
  CUBEB_SAMPLE_FLOAT32NE = CUBEB_SAMPLE_FLOAT32LE
#endif
} cubeb_sample_format;
typedef void const * cubeb_devid;
typedef enum {
  CUBEB_LOG_DISABLED = 0, 
  CUBEB_LOG_NORMAL = 1, 
  CUBEB_LOG_VERBOSE = 2, 
} cubeb_log_level;
typedef enum {
  CUBEB_LAYOUT_UNDEFINED, 
  CUBEB_LAYOUT_DUAL_MONO,
  CUBEB_LAYOUT_DUAL_MONO_LFE,
  CUBEB_LAYOUT_MONO,
  CUBEB_LAYOUT_MONO_LFE,
  CUBEB_LAYOUT_STEREO,
  CUBEB_LAYOUT_STEREO_LFE,
  CUBEB_LAYOUT_3F,
  CUBEB_LAYOUT_3F_LFE,
  CUBEB_LAYOUT_2F1,
  CUBEB_LAYOUT_2F1_LFE,
  CUBEB_LAYOUT_3F1,
  CUBEB_LAYOUT_3F1_LFE,
  CUBEB_LAYOUT_2F2,
  CUBEB_LAYOUT_2F2_LFE,
  CUBEB_LAYOUT_3F2,
  CUBEB_LAYOUT_3F2_LFE,
  CUBEB_LAYOUT_3F3R_LFE,
  CUBEB_LAYOUT_3F4_LFE,
  CUBEB_LAYOUT_MAX
} cubeb_channel_layout;
typedef enum {
  CUBEB_STREAM_PREF_NONE     = 0x00, 
  CUBEB_STREAM_PREF_LOOPBACK = 0x01 
} cubeb_stream_prefs;
typedef struct {
  cubeb_sample_format format;   
  uint32_t rate;                
  uint32_t channels;            
  cubeb_channel_layout layout;  
  cubeb_stream_prefs prefs;     
} cubeb_stream_params;
typedef struct {
  char * output_name; 
  char * input_name; 
} cubeb_device;
typedef enum {
  CUBEB_STATE_STARTED, 
  CUBEB_STATE_STOPPED, 
  CUBEB_STATE_DRAINED, 
  CUBEB_STATE_ERROR    
} cubeb_state;
typedef enum {
  CUBEB_DEVICE_TYPE_UNKNOWN,
  CUBEB_DEVICE_TYPE_INPUT,
  CUBEB_DEVICE_TYPE_OUTPUT
} cubeb_device_type;
typedef struct {
  cubeb_devid devid;          
  char const * device_id;     
  char const * friendly_name; 
  char const * group_id;      
  char const * vendor_name;   
  cubeb_device_type type;     
  cubeb_device_state state;   
  cubeb_device_pref preferred;
  cubeb_device_fmt format;    
  cubeb_device_fmt default_format; 
  uint32_t max_channels;      
  uint32_t default_rate;      
  uint32_t max_rate;          
  uint32_t min_rate;          
  uint32_t latency_lo;        
  uint32_t latency_hi;        
} cubeb_device_info;
typedef struct {
  cubeb_device_info * device; 
  size_t count;               
} cubeb_device_collection;
typedef long (* cubeb_data_callback)(cubeb_stream * stream,
                                     void * user_ptr,
                                     void const * input_buffer,
                                     void * output_buffer,
                                     long nframes);
typedef void (* cubeb_state_callback)(cubeb_stream * stream,
                                      void * user_ptr,
                                      cubeb_state state);
typedef void (* cubeb_device_changed_callback)(void * user_ptr);
typedef void (* cubeb_device_collection_changed_callback)(cubeb * context,
                                                          void * user_ptr);
typedef void (* cubeb_log_callback)(char const * fmt, ...);
CUBEB_EXPORT int cubeb_init(cubeb ** context, char const * context_name,
                                              char const * backend_name);
CUBEB_EXPORT char const * cubeb_get_backend_id(cubeb * context);
CUBEB_EXPORT int cubeb_get_max_channel_count(cubeb * context, uint32_t * max_channels);
CUBEB_EXPORT int cubeb_get_min_latency(cubeb * context,
                                       cubeb_stream_params * params,
                                       uint32_t * latency_frames);
CUBEB_EXPORT int cubeb_get_preferred_sample_rate(cubeb * context, uint32_t * rate);
CUBEB_EXPORT int cubeb_get_preferred_channel_layout(cubeb * context, cubeb_channel_layout * layout);
CUBEB_EXPORT void cubeb_destroy(cubeb * context);
CUBEB_EXPORT int cubeb_stream_init(cubeb * context,
                                   cubeb_stream ** stream,
                                   char const * stream_name,
                                   cubeb_devid input_device,
                                   cubeb_stream_params * input_stream_params,
                                   cubeb_devid output_device,
                                   cubeb_stream_params * output_stream_params,
                                   uint32_t latency_frames,
                                   cubeb_data_callback data_callback,
                                   cubeb_state_callback state_callback,
                                   void * user_ptr);
CUBEB_EXPORT void cubeb_stream_destroy(cubeb_stream * stream);
CUBEB_EXPORT int cubeb_stream_start(cubeb_stream * stream);
CUBEB_EXPORT int cubeb_stream_stop(cubeb_stream * stream);
CUBEB_EXPORT int cubeb_stream_get_position(cubeb_stream * stream, uint64_t * position);
CUBEB_EXPORT int cubeb_stream_get_latency(cubeb_stream * stream, uint32_t * latency);
CUBEB_EXPORT int cubeb_stream_set_volume(cubeb_stream * stream, float volume);
CUBEB_EXPORT int cubeb_stream_set_panning(cubeb_stream * stream, float panning);
CUBEB_EXPORT int cubeb_stream_get_current_device(cubeb_stream * stm,
                                                 cubeb_device ** const device);
CUBEB_EXPORT int cubeb_stream_device_destroy(cubeb_stream * stream,
                                             cubeb_device * devices);
CUBEB_EXPORT int cubeb_stream_register_device_changed_callback(cubeb_stream * stream,
                                                               cubeb_device_changed_callback device_changed_callback);
CUBEB_EXPORT int cubeb_enumerate_devices(cubeb * context,
                                         cubeb_device_type devtype,
                                         cubeb_device_collection * collection);
CUBEB_EXPORT int cubeb_device_collection_destroy(cubeb * context,
                                                 cubeb_device_collection * collection);
CUBEB_EXPORT int cubeb_register_device_collection_changed(cubeb * context,
                                                          cubeb_device_type devtype,
                                                          cubeb_device_collection_changed_callback callback,
                                                          void * user_ptr);
CUBEB_EXPORT int cubeb_set_log_callback(cubeb_log_level log_level,
                                        cubeb_log_callback log_callback);